_cache/v0.18.0/sqlite/specs.md
---
title: "sqlite"
layout: cache
categories: [package, v0.18.0]
meta: {"versions": ["3.38.5"], "compilers": ["gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["ubuntu18.04"], "platforms": ["linux"], "targets": ["x86_64"], "stacks": ["build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 2, "num_specs_by_stack": {"tutorial": 2, "build_systems": 1, "e4s": 1, "data-vis-sdk": 1, "radiuss": 1, "root": 2}}
spec_details: [{"hash": "zbjzhlerhmb2liwt2zh4krac2i5hfftt", "compiler": "gcc@=7.5.0", "versions": ["3.38.5"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+column_metadata", "+dynamic_extensions", "+fts", "~functions", "+rtree"], "stacks": ["tutorial", "build_systems", "e4s", "data-vis-sdk", "radiuss", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/sqlite-3.38.5/linux-ubuntu18.04-x86_64-gcc-7.5.0-sqlite-3.38.5-zbjzhlerhmb2liwt2zh4krac2i5hfftt.spack"}, {"hash": "fs4yqymm2w6ooyd3xqvrqkvxnnfgasy7", "compiler": "gcc@=8.4.0", "versions": ["3.38.5"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+column_metadata", "+dynamic_extensions", "+fts", "~functions", "+rtree"], "stacks": ["root", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/sqlite-3.38.5/linux-ubuntu18.04-x86_64-gcc-8.4.0-sqlite-3.38.5-fs4yqymm2w6ooyd3xqvrqkvxnnfgasy7.spack"}]
---