_cache/v0.18.1/sqlite/specs.md
---
title: "sqlite"
layout: cache
categories: [package, v0.18.1]
meta: {"versions": ["3.38.5"], "compilers": ["gcc@=7.3.1", "gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["amzn2", "ubuntu18.04"], "platforms": ["linux"], "targets": ["aarch64", "graviton2", "x86_64", "x86_64_v3", "x86_64_v4"], "stacks": ["aws-ahug", "aws-ahug-aarch64", "aws-isc", "aws-isc-aarch64", "build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 6, "num_specs_by_stack": {"e4s": 1, "tutorial": 2, "radiuss": 1, "data-vis-sdk": 1, "build_systems": 1, "root": 6, "aws-isc": 2, "aws-ahug": 2, "aws-isc-aarch64": 2, "aws-ahug-aarch64": 2}}
spec_details: [{"hash": "zbjzhlerhmb2liwt2zh4krac2i5hfftt", "compiler": "gcc@=7.5.0", "versions": ["3.38.5"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+column_metadata", "+dynamic_extensions", "+fts", "~functions", "+rtree"], "stacks": ["e4s", "tutorial", "radiuss", "data-vis-sdk", "build_systems", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/sqlite-3.38.5/linux-ubuntu18.04-x86_64-gcc-7.5.0-sqlite-3.38.5-zbjzhlerhmb2liwt2zh4krac2i5hfftt.spack"}, {"hash": "iezgz5cpgnuiemunim7ivmfhvnqshbwa", "compiler": "gcc@=7.3.1", "versions": ["3.38.5"], "os": "amzn2", "platform": "linux", "target": "x86_64_v4", "variants": ["+column_metadata", "+dynamic_extensions", "+fts", "~functions", "+rtree"], "stacks": ["root", "aws-isc", "aws-ahug"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v4/gcc-7.3.1/sqlite-3.38.5/linux-amzn2-x86_64_v4-gcc-7.3.1-sqlite-3.38.5-iezgz5cpgnuiemunim7ivmfhvnqshbwa.spack"}, {"hash": "x66wwja4pscqtufi5mtr7ctt5fa77oon", "compiler": "gcc@=7.3.1", "versions": ["3.38.5"], "os": "amzn2", "platform": "linux", "target": "graviton2", "variants": ["+column_metadata", "+dynamic_extensions", "+fts", "~functions", "+rtree"], "stacks": ["aws-isc-aarch64", "aws-ahug-aarch64", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-graviton2/gcc-7.3.1/sqlite-3.38.5/linux-amzn2-graviton2-gcc-7.3.1-sqlite-3.38.5-x66wwja4pscqtufi5mtr7ctt5fa77oon.spack"}, {"hash": "eapvjplcjcphd76a36dprepukcsek5hn", "compiler": "gcc@=7.3.1", "versions": ["3.38.5"], "os": "amzn2", "platform": "linux", "target": "aarch64", "variants": ["+column_metadata", "+dynamic_extensions", "+fts", "~functions", "+rtree"], "stacks": ["aws-isc-aarch64", "aws-ahug-aarch64", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-aarch64/gcc-7.3.1/sqlite-3.38.5/linux-amzn2-aarch64-gcc-7.3.1-sqlite-3.38.5-eapvjplcjcphd76a36dprepukcsek5hn.spack"}, {"hash": "7hsldw4kossty5uzx2f4su3xx5hb6ozv", "compiler": "gcc@=7.3.1", "versions": ["3.38.5"], "os": "amzn2", "platform": "linux", "target": "x86_64_v3", "variants": ["+column_metadata", "+dynamic_extensions", "+fts", "~functions", "+rtree"], "stacks": ["root", "aws-isc", "aws-ahug"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v3/gcc-7.3.1/sqlite-3.38.5/linux-amzn2-x86_64_v3-gcc-7.3.1-sqlite-3.38.5-7hsldw4kossty5uzx2f4su3xx5hb6ozv.spack"}, {"hash": "fs4yqymm2w6ooyd3xqvrqkvxnnfgasy7", "compiler": "gcc@=8.4.0", "versions": ["3.38.5"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+column_metadata", "+dynamic_extensions", "+fts", "~functions", "+rtree"], "stacks": ["tutorial", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/sqlite-3.38.5/linux-ubuntu18.04-x86_64-gcc-8.4.0-sqlite-3.38.5-fs4yqymm2w6ooyd3xqvrqkvxnnfgasy7.spack"}]
---